--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,5 @@
+@import "./abstracts/placeholder";
+@import "./abstracts/variables";
 @import "./base/reset";
 @import "./components/container";
+@import "./layouts/header";
